Fixed spacing issues on sidebar

--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,7 +1,6 @@
 .left-sidebar {
   top: 80%;
   position: absolute;
-  color: rgb(206, 199, 199);
   width: 40px;
   z-index: 1;
   .left-sidebar-list {
@@ -18,10 +17,9 @@
     margin-left: 11px;
   }
   .sidebar-icons {
-    color: rgb(206, 199, 199);
     width: 25px;
     height: 100%;
-    overflow-x: scroll;
+    padding-bottom: 5px;
     :hover {
       color: #4cc2f0;
     }
